# GoString

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/headers/: go_color_enum.h  go_logic.h  go_point.h  go_string.h
src/sources/: go_logic.cpp  go_point.cpp  go_string.cpp
